@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.35 2008/04/20 12:22:58 reinoud Exp $
+$NetBSD: distinfo,v 1.36 2008/08/07 10:28:59 reinoud Exp $
 
-SHA1 (UDFclient.0.6.2.tgz) = e55e2b731d4ecbe35dae2b415dd16646d31f9422
-RMD160 (UDFclient.0.6.2.tgz) = d25524ad8a8232c228729dc1c5dd81796cda0998
-Size (UDFclient.0.6.2.tgz) = 238615 bytes
+SHA1 (UDFclient.0.6.3.tgz) = 8a3b363c1aaa687b8d912ed4500df51a95e24859
+RMD160 (UDFclient.0.6.3.tgz) = beb54fc0b1c113aca915f899bac6062ee9ae6fc7
+Size (UDFclient.0.6.3.tgz) = 237818 bytes
